# equity-research

./: .env.example  .gitignore  =1.0  DELIVERY_MANIFEST.md  FINAL_SUMMARY.txt  FMP_API_RESEARCH_GUIDE.md  GOOGL_COMPREHENSIVE_FINANCIAL_DATA.json  GOOGL_DATA_COLLECTION_SUMMARY.md  GOOGL_DATA_FETCH_SUMMARY.md  GOOGL_DATA_INDEX.md  GOOGL_DELIVERY_SUMMARY.txt  GOOGL_EQUITY_RESEARCH_REPORT.md  GOOGL_PROFESSIONAL_EQUITY_RESEARCH_REPORT.md  GOOGL_QUICK_REFERENCE.md  GOOGL_RESEARCH_DATA_FETCHER.md  GOOGL_RESEARCH_INDEX.md  QUICK_START_GOOGL.md  README.md  README_GOOGL_RESEARCH.md  build_googl_dcf.py  fetch_fmp_data.py  fetch_googl_research_data.py  gcp_ai_infrastructure_research.json  googl_research_data_structure.py  pyproject.toml  raph_plan.md  run_googl_research.py  sample_googl_research_output.json  test_fmp_api.py
.claude/: CLAUDE.md  ralph-loop.local.md  ralph-prompt.txt
.claude/skills/equity-research/: SKILL.md
.claude/skills/financial-modeling/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/xlsx/: SKILL.md
archive/: pipeline.py  simple_pipeline.py
config/: sources.yml
docs/: API_REFERENCES.md  ARCHITECTURE_FIXES_IMPLEMENTATION_REPORT.md  ARCHITECTURE_REVIEW_CONSOLIDATED_EXECUTION_PLAN.md  ARCHITECTURE_REVIEW_PROMPT.md  ARCHITECTURE_REVIEW_PROMPT_V2.md  ARCHITECTURE_REVIEW_PROMPT_V3_COMPLETE.md  ARCHITECTURE_RUNBOOK.md  ARCHITECTURE_STATUS.md  IMPLEMENTATION_PLAN.md  STRATEGY.md  TOKEN_FLOW.md  equity-research.code-workspace
docs/prompts/: README.md  deep_research.md  discovery_system.md  discovery_user.md  synthesis.md
frontend/: CLAUDE.md  PLAN.md  package-lock.json  package.json
frontend/api/: CLAUDE.md  requirements.txt  server.py
frontend/src/: CLAUDE.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentActivity.tsx  CLAUDE.md  Logo.tsx  NewRunModal.tsx  PipelineStages.tsx  ReportViewer.tsx  RunHistory.tsx  RunPanel.tsx
frontend/src/hooks/: CLAUDE.md  useRun.ts
frontend/src/store/: CLAUDE.md  research.ts
frontend/src/types/: CLAUDE.md  index.ts
prompts/: 01_discovery.md  02_external_discovery.md  03_deep_research.md  04_synthesis.md  05_judge.md
scripts/: analyze_context.py  arch_audit.py  sanity_check.py  setup_libreoffice.sh  test_deep_research.py  test_discovery_transcripts.py  test_external_discovery.py  test_synthesis.py
src/app/: CLAUDE.md
src/er/: CLAUDE.md  __init__.py  budget.py  config.py  exceptions.py  logging.py  manifest.py  types.py  validation.py
test_cache/: evidence.db
tests/: __init__.py  conftest.py  test_budget.py  test_confidence.py  test_config.py  test_coverage_auditor.py  test_coverage_types.py  test_eval.py  test_event_store.py  test_evidence_store.py  test_filing_index.py  test_llm_router.py  test_manifest_versioning.py  test_openai_client.py  test_peers.py  test_production_fixes.py  test_query_planner.py  test_reports.py  test_sec_client.py  test_security.py  test_transcript_index.py  test_valuation.py  test_verification.py
transcripts/GOOGL/: q1_2025.txt  q2_2025.txt  q3_2025.txt  q4_2024.txt
(+104 files in other folders)
